objects/LLC_BI__Product_Program__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Feature_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not used because the product program selector feature is not being used. Provides features that are offered by the program.</description>
        <label>Feature Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Product Programs (Feature Template)</relationshipLabel>
        <relationshipName>Product_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not used because the product program selector feature is not being used. Creates a hierarchy of product programs.</description>
        <label>Parent Program</label>
        <referenceTo>LLC_BI__Product_Program__c</referenceTo>
        <relationshipLabel>Product Programs</relationshipLabel>
        <relationshipName>Product_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Provides the product reference.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product Programs</relationshipLabel>
        <relationshipName>Product_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualification_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not used because the product program selector feature is not being used. Sets qualification metrics.</description>
        <label>Qualification Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Product Programs</relationshipLabel>
        <relationshipName>Product_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rank__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Rank that determines the order/weight of the product program.</description>
        <label>Rank</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Program</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>